Bug 1342571 - Shrink dashed DrawTargetSkia::StrokeRect where possible. r=mstange, a=lizzard

MozReview-Commit-ID: 7vu9j8jCwQn

--HG--
extra : source : 129546a71da906cc26d19656128e0e2f45750e8b
extra : histedit_source : 03a1f0e72a36f78f7f6e24a647b58507d581db27